basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__edit_mode_typing_newline_in_active_block_stable_trailing.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│    𝓣𝓮𝓼𝓽                                                                      │"
"│    ═════════════════════════════════════════════════════════════════════════ │"
"│                                                                              │"
"│  1 para1                                                                     │"
"│  2                                                                           │"
"│  3                                                                           │"
"│  4                                                                           │"
"│  5 para2                                                                     │"
"│  6                                                                           │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
