basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__edit_mode_with_arbitrary_cursor_move.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ 𝓣𝓮𝓼𝓽                                                                         │"
"│ ════════════════════════════════════════════════════════════════════════════ │"
"│                                                                              │"
"│▎Deep Basalt Quotes                                                           │"
"│ ──────────────────────────────────────────────────────────────────────────── │"
"│ You can have deeper levels of quotes by adding a > symbols before the text   │"
"│ ⤷ inside the block quote.                                                    │"
"│                                                                              │"
"│ ┃ Regular thoughts                                                           │"
"│ ┃                                                                            │"
"│ ┃ ┃ Deeper thoughts                                                          │"
"│ ┃ ┃ ┃ Very deep thoughts                                                     │"
"│ ┃ ┃ ┃ ● Someone on the internet 1996                                         │"
"│ ┃                                                                            │"
"│ ┃ Back to regular thoughts                                                   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
