basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__edit_mode_with_content.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│    𝓣𝓮𝓼𝓽                                                                      │"
"│    ═════════════════════════════════════════════════════════════════════════ │"
"│                                                                              │"
"│  1 ## Deep Quotes                                                            │"
"│    ───────────────────────────────────────────────────────────────────────── │"
"│  2                                                                           │"
"│  3 You can have deeper levels of quotes by adding a > symbols before the     │"
"│    ⤷ text inside the block quote.                                            │"
"│  4                                                                           │"
"│  5 ┃ Regular thoughts                                                        │"
"│  6 ┃                                                                         │"
"│  7 ┃ ┃ Deeper thoughts                                                       │"
"│  9 ┃ ┃ ┃ Very deep thoughts                                                  │"
"│ 11 ┃ ┃ ┃ ● Someone on the internet 1996                                      │"
"│ 12 ┃                                                                         │"
"│ 13 ┃ Back to regular thoughts                                                │"
"│ 14                                                                           │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
