basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__edit_mode_with_content_with_complete_word_input_change.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ 𝓣𝓮𝓼𝓽                                                                         │"
"│ ════════════════════════════════════════════════════════════════════════════ │"
"│                                                                              │"
"│ Deep Quotes                                                                  │"
"│ ──────────────────────────────────────────────────────────────────────────── │"
"│ Basalt                                                                       │"
"│                                                                              │"
"│▎You can have deeper levels of quotes by adding a > symbols before the text   │"
"│ ⤷ inside the block quote.                                                    │"
"│                                                                              │"
"│ ┃ Regular thoughts                                                           │"
"│ ┃                                                                            │"
"│ ┃ ┃ Deeper thoughts                                                          │"
"│ ┃ ┃ ┃ Very deep thoughts                                                     │"
"│ ┃ ┃ ┃ ● Someone on the internet 1996                                         │"
"│ ┃                                                                            │"
"│ ┃ Back to regular thoughts                                                   │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
