basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__headings.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────▲"
"│ 𝓱𝓮𝓪𝓭𝓲𝓷𝓰𝓼                                                                     █"
"│ ════════════════════════════════════════════════════════════════════════════ █"
"│                                                                              █"
"│▎Headings                                                                     █"
"│ ──────────────────────────────────────────────────────────────────────────── █"
"│ To create a heading, add up to six # symbols before your heading text. The   █"
"│ ⤷ number of # symbols determines the size of the heading.                    █"
"│                                                                              █"
"│ THIS IS A HEADING 1                                                          █"
"│ ════════════════════════════════════════════════════════════════════════════ █"
"│ This is a heading 2                                                          ║"
"│ ──────────────────────────────────────────────────────────────────────────── ║"
"│ ◉ This is a heading 3                                                        ║"
"│                                                                              ║"
"│ ◎ This is a heading 4                                                        ║"
"│                                                                              ║"
"│ ◈ 𝓣𝓱𝓲𝓼 𝓲𝓼 𝓪 𝓱𝓮𝓪𝓭𝓲𝓷𝓰 𝟓                                                        ║"
"│                                                                              ║"
"╰──────────────────────────────────────────────────────────────────────────────▼"
