basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__image_reserves_space.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────▲"
"│ 𝕋𝕖𝕤𝕥                                 █"
"│ ════════════════════════════════════ █"
"│                                      █"
"│ Diagram                              █"
"│ ──────────────────────────────────── █"
"│                                      █"
"│                                      █"
"│                                      █"
"│                                      █"
"│                                      ║"
"│                                      ║"
"│                                      ║"
"╰ READ ────────────────────────────────▼"
