basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__lists.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────▲"
"│ 𝓵𝓲𝓼𝓽𝓼                                                                        █"
"│ ════════════════════════════════════════════════════════════════════════════ █"
"│                                                                              █"
"│▎Lists                                                                        █"
"│ ──────────────────────────────────────────────────────────────────────────── █"
"│ You can create an unordered list by adding a -, *, or + before the text.     █"
"│                                                                              █"
"│ ● First list item                                                            █"
"│ ● Second list item                                                           █"
"│ ● Third list item                                                            ║"
"│                                                                              ║"
"│ To create an ordered list, start each line with a number followed by a . or  ║"
"│ ⤷ ) symbol.                                                                  ║"
"│                                                                              ║"
"│ 1. First list item                                                           ║"
"│ 2. Second list item                                                          ║"
"│ 3. Third list item                                                           ║"
"│                                                                              ║"
"╰──────────────────────────────────────────────────────────────────────────────▼"
