basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__lists_line_breaks.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ 𝓵𝓲𝓼𝓽𝓼_𝓵𝓲𝓷𝓮_𝓫𝓻𝓮𝓪𝓴𝓼                                                            │"
"│ ════════════════════════════════════════════════════════════════════════════ │"
"│                                                                              │"
"│▎Lists with line breaks                                                       │"
"│ ──────────────────────────────────────────────────────────────────────────── │"
"│ You can use line breaks within an ordered list without altering the          │"
"│ ⤷ numbering.                                                                 │"
"│                                                                              │"
"│ 1. First list item                                                           │"
"│ 2. Second list item                                                          │"
"│ 3. Third list item                                                           │"
"│ 4. Fourth list item                                                          │"
"│ 5. Fifth list item                                                           │"
"│ 6. Sixth list item                                                           │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
