basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__lists_raw_line_breaks.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ 𝕝𝕚𝕤𝕥𝕤_𝕣𝕒𝕨_𝕝𝕚𝕟𝕖_𝕓𝕣𝕖𝕒𝕜𝕤                                                        │"
"│ ════════════════════════════════════════════════════════════════════════════ │"
"│                                                                              │"
"│ Lists with line breaks                                                       │"
"│ ──────────────────────────────────────────────────────────────────────────── │"
"│ You can use line breaks within an ordered list without altering the          │"
"│  ⤷ numbering.                                                                │"
"│                                                                              │"
"│ - First list item                                                            │"
"│                                                                              │"
"│                                                                              │"
"│   - Second list item                                                         │"
"│     - Third list item                                                        │"
"│                                                                              │"
"│   - Fourth list item                                                         │"
"│                                                                              │"
"│ - Fifth list item                                                            │"
"│     - Sixth list item                                                        │"
"╰ EDIT ────────────────────────────────────────────────────────────────────────╯"
