basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__nesting_lists.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ 𝓷𝓮𝓼𝓽𝓲𝓷𝓰_𝓵𝓲𝓼𝓽𝓼                                                                │"
"│ ════════════════════════════════════════════════════════════════════════════ │"
"│                                                                              │"
"│▎Nesting lists                                                                │"
"│ ──────────────────────────────────────────────────────────────────────────── │"
"│ You can nest any type of list—ordered, unordered, or task lists—under any    │"
"│ ⤷ other type of list.                                                        │"
"│                                                                              │"
"│ To create a nested list, indent one or more list items. You can mix list     │"
"│ ⤷ types within a nested structure:                                           │"
"│                                                                              │"
"│ 1. First list item                                                           │"
"│   1. Ordered nested list item                                                │"
"│ 2. Second list item                                                          │"
"│   ○ Unordered nested list item                                               │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
